<resources>
    <string name="app_name">FragListApp</string>
    <string name="add">ADD ITEM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_editview">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="done_by_deadline">done by deadline</string>
    <string name="done_after_due">done after due</string>
    <string name="past_due">past due</string>
    <string name="to_be_done">to be done</string>
    <string name="total_tasks">Total Tasks</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_navdraweractivity">navdraweractivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="textview">TextView</string>


</resources>
